# mantis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ALTERNATIVE_DATA_INTEGRATION_SUMMARY.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  MULTI_TIMEFRAME_DESIGN.md  PROMPT.md  RALPH_GUIDE.md  README.md  mantis.sh  mkdocs.yml  pyproject.toml  pytest.ini  ralph.sh
.github/workflows/: bench.yml  ci.yml  coverage.yml  docs.yml  release.yml
benches/: backtest_bench.rs
benchmarks/results/: .gitkeep  main.json
data/: sample.csv
data/models/: larger_mlp.onnx  minimal.onnx  simple_mlp.onnx
data/samples/: AAPL.csv  BTC.csv  SPY.csv
docs/: index.md  playground.md  quickstart.md
docs/api/: backtest.md  data.md  index.md  results.md  validation.md
docs/concepts/: benchmarks.md  cost-model.md  execution-model.md  how-it-works.md  validation.md
docs/cookbook/: backtests.md  index.md  loading-data.md  multi-symbol.md  position-sizing.md  validation.md  visualization.md
docs/javascripts/: analytics.js
docs/stylesheets/: extra.css
examples/: backtest.toml  feature_export.rs  ml_backtest.rs  pytorch_integration.py  walkforward.rs
notebooks/: multi_symbol.ipynb  quickstart.ipynb  validation.ipynb
python/mantis/: __init__.py  __init__.pyi
scripts/: check_bench_regression.py  generate_test_onnx.py  test_doc_examples.py
src/: analytics.rs  cli.rs  config.rs  cost_sensitivity.rs  cpcv.rs  data.rs  engine.rs  error.rs  experiments.rs  export.rs  features.rs  lib.rs  main.rs  metadata.rs  monte_carlo.rs  multi_asset.rs  onnx.rs  options.rs  portfolio.rs  regime.rs  risk.rs  sensitivity.rs  strategy.rs  streaming.rs  timeframe.rs  types.rs  validation.rs  viz.rs  walkforward.rs
src/python/: backtest.rs  cpcv.rs  data.rs  mod.rs  onnx.rs  results.rs  sensitivity.rs  sweep.rs  types.rs
src/strategies/: breakout.rs  macd_strategy.rs  mean_reversion.rs  ml_strategy.rs  mod.rs  momentum.rs  multi_timeframe.rs  rsi_strategy.rs  sma_crossover.rs
tests/: integration_tests.rs  onnx_integration_tests.rs  proptest_tests.rs
tests/python/: __init__.py  conftest.py  test_backtest.py  test_compare.py  test_coverage_gaps.py  test_cpcv.py  test_data_loading.py  test_export.py  test_metrics.py  test_sensitivity.py  test_sweep.py  test_validation.py  test_visualization.py
