[package]
name = "ralph-backtest"
version = "1.0.0"
edition = "2021"
authors = ["Johan"]
description = "A production-quality CLI backtest engine for quantitative trading"
license = "MIT"
repository = "https://github.com/johan/ralph-rust-backtest"
keywords = ["trading", "backtest", "quantitative", "finance", "cli"]
categories = ["command-line-utilities", "finance", "simulation"]

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Data handling
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
parquet = { version = "53", default-features = false, features = ["arrow"] }
arrow = { version = "53", default-features = false }

# Numerics and statistics
statrs = "0.16"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and progress
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"

# Parallelism (for parameter optimization)
rayon = "1.8"

# Output formatting
tabled = "0.15"
colored = "2.1"

[dev-dependencies]
tempfile = "3.10"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "backtest_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "ralph"
path = "src/main.rs"
