[package]
name = "mantis"
version = "1.0.0"
edition = "2021"
authors = ["Johan"]
description = "Mantis - A high-performance backtesting engine for quantitative trading"
license = "MIT"
repository = "https://github.com/johan/mantis"
keywords = ["trading", "backtest", "quantitative", "finance", "cli"]
categories = ["command-line-utilities", "finance", "simulation"]

[lib]
name = "mantis"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3/extension-module", "pyo3/abi3-py38", "numpy"]
onnx = ["dep:ort", "dep:ndarray"]

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Data handling
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
parquet = { version = "53", default-features = false, features = ["arrow"] }
arrow = { version = "53", default-features = false }
glob = "0.3"

# Numerics and statistics
statrs = "0.16"
rand = "0.8"
uuid = { version = "1.7", features = ["serde", "v4"] }
clarabel = "0.11"  # Quadratic optimization for mean-variance portfolio

# Reproducibility and versioning
git2 = { version = "0.19", default-features = false }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and progress
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"

# Parallelism (for parameter optimization)
rayon = "1.8"

# ML/AI - ONNX Runtime for model inference (optional, enable with --features onnx)
ort = { version = "2.0.0-rc.11", optional = true }
ndarray = { version = "0.16", optional = true }

# Output formatting
tabled = "0.15"
colored = "2.1"

# Python bindings (optional, enabled with --features python)
pyo3 = { version = "0.22", optional = true }
numpy = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3.10"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "backtest_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "mantis"
path = "src/main.rs"
