[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mantis-bt"
version = "1.0.0"
description = "A high-performance backtesting engine for quantitative trading"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Johan" }]
requires-python = ">=3.8"
keywords = ["trading", "backtest", "quantitative", "finance", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3.0", "pyarrow>=8.0.0"]
polars = ["polars>=0.19.0"]
jupyter = ["plotly>=5.0.0"]
all = ["pandas>=1.3.0", "pyarrow>=8.0.0", "polars>=0.19.0", "plotly>=5.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pandas>=1.3.0",
    "pyarrow>=8.0.0",
    "polars>=0.19.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/johan/mantis"
Documentation = "https://github.com/johan/mantis#readme"
Repository = "https://github.com/johan/mantis"
Issues = "https://github.com/johan/mantis/issues"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "mantis._mantis"
